--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
             <button id="restart-btn">Play Again</button>
         </div>
     </div>
+    
+    <div id="minimap-container">
+        <div class="minimap-label">World Map</div>
+        <canvas id="minimap"></canvas>
+        <div class="minimap-label">Click to navigate</div>
+    </div>
+    
+    <div id="mold-above" class="mold-indicator">⬆️ Mold detected above! ⬆️</div>
+    <div id="mold-below" class="mold-indicator">⬇️ Mold detected below! ⬇️</div>
 
     <script src="constants.js"></script>
     <script src="terrain.js"></script>
