Revert "remove minimap and add mold indicators"
This reverts commit e9dac16707f3c9882819cfb52239d617c9d5ed7e.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <button id="restart-btn">Play Again</button>
         </div>
     </div>
+    
+    <div id="minimap-container">
+        <div class="minimap-label">World Map</div>
+        <canvas id="minimap"></canvas>
+        <div class="minimap-label">Click to navigate</div>
+    </div>
 
     <script src="constants.js"></script>
     <script src="terrain.js"></script>
